<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="@string/search_title"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/bookmarks"
        android:title="@string/bookmarks"
        android:icon="@drawable/ic_bookmark_border_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/setting"
        app:showAsAction="always"
        android:title="@string/setting">

        <item
            android:id="@+id/news"
            android:title="@string/news" />

        <item
            android:id="@+id/light_reads"
            android:title="@string/light_reads" />
        <item
            android:id="@+id/research_articles"
            android:title="@string/research_articles" />
        <item
            android:id="@+id/online_lectures"
            android:title="@string/online_lectures" />
    </item>
</menu>