<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/myrect"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/colorwhite"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/eighteen">
        <TextView
            android:id="@+id/tv_news_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:textStyle="bold"
            android:textColor="@color/cardview_dark_background"
            android:text="@string/demo_title"
            android:textSize="@dimen/tv_news_title"/>

        <TextView
            android:id="@+id/tv_news_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:text="@string/demo_date"
            android:paddingTop="@dimen/eight"/>

        <TextView
            android:id="@+id/tv_news_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_text"
            android:textAlignment="textStart"
            android:textSize="@dimen/tv_news_text"
            android:textColor="@color/cardview_dark_background"/>

        <ImageView
            android:id="@+id/img_news_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/description"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingTop="8dp">

            <ImageButton
                android:id="@+id/btn_news_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_share_black_24dp"
                android:padding="8dp"
                android:layout_marginEnd="@dimen/eight"
                android:contentDescription="@string/description"/>
            <ImageButton
                android:id="@+id/btn_news_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_bookmark_border_black_24dp"
                android:padding="8dp"
                android:contentDescription="@string/description"/>
            </LinearLayout>
        </LinearLayout>
</android.support.v7.widget.CardView>