<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        xmlns:TagsEditText="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/profile_loder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:indicatorName="LineScaleIndicator"
            app:indicatorColor="@color/colorPrimary"/>
            <RelativeLayout
                android:id="@+id/user_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">
                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/edit_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_edit_black_32dp"
                    android:padding="@dimen/four"/>

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/option_menu"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/four"
                    android:src="@drawable/ic_settings_black_32dp" />
            </LinearLayout>
            <View
                android:id="@+id/header_cover_image"
                android:layout_width="match_parent"
                android:layout_height="75dp">
            </View>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_profile_photo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_below="@+id/header_cover_image"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-75dp"
                    TagsEditText:civ_border_color="@color/colorPrimary"
                    TagsEditText:civ_border_width=".5dp"
                    TagsEditText:civ_border_overlay="true"
                    TagsEditText:civ_fill_color="@color/colorPrimary"
                    android:elevation="20dp"
                    android:src="@drawable/ic_account_circle_white_24px"
                    android:scaleType="centerCrop"
                    android:contentDescription="@null"/>
            <android.support.v7.widget.CardView
                android:id="@+id/cvUserData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                app:cardCornerRadius="20dp"
                android:elevation="4dp"
                app:cardElevation="8dp"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="40dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Sahil Doshi"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textColor="#fff"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/user_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Sahil Doshi"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:textColor="#fff" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/sixteen">
                        <TextView
                            android:id="@+id/user_email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="#fff"
                            android:drawableStart="@drawable/ic_email_black_24dp"
                            android:maxLines="1" />
                        <TextView
                            android:id="@+id/user_location"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:textColor="#fff"
                            android:layout_weight="1"
                            android:drawableStart="@drawable/ic_location_on_black_24dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sixteen"
                        android:layout_marginEnd="@dimen/sixteen"
                        android:layout_marginBottom="@dimen/sixteen">
                        <TextView
                            android:id="@+id/user_affiliate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="#fff"
                            android:maxLines="1"
                            android:drawableStart="@drawable/ic_affiliate_marketing"/>
                        <TextView
                            android:id="@+id/user_Designation"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:maxLines="1"
                            android:textColor="#fff"
                            android:drawableStart="@drawable/ic_designation"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cvUserData"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@android:color/white"
                    android:elevation="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="#fff"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="10dp"
                        android:text="@string/opentm"
                        android:textAlignment="center" />

                    <RadioGroup
                        android:id="@+id/btn_mentoring"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/four"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/rb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yes" />

                        <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/rb1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/no" />
                    </RadioGroup>
                </LinearLayout>

                <mabbas007.tagsedittext.TagsEditText
                    android:id="@+id/user_intrest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/four"
                    android:hint="@string/areas_of_interest"
                    TagsEditText:allowSpaceInTag="true"
                    TagsEditText:tagsCloseImageRight="@drawable/tag_close"
                    TagsEditText:tagsBackground="@drawable/square"
                    TagsEditText:tagsCloseImageLeft="@drawable/dot"
                    TagsEditText:tagsTextColor="@color/blackOlive"
                    TagsEditText:tagsTextSize="@dimen/defaultTagsTextSize"
                    TagsEditText:tagsCloseImagePadding="@dimen/defaultTagsCloseImagePadding"/>

                <mabbas007.tagsedittext.TagsEditText
                    android:id="@+id/user_experties"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/domain_of_expertise"
                    TagsEditText:allowSpaceInTag="true"
                    TagsEditText:tagsCloseImageRight="@drawable/tag_close"
                    TagsEditText:tagsBackground="@drawable/square"
                    TagsEditText:tagsCloseImageLeft="@drawable/dot"
                    TagsEditText:tagsTextColor="@color/blackOlive"
                    TagsEditText:tagsTextSize="@dimen/defaultTagsTextSize"
                    TagsEditText:tagsCloseImagePadding="@dimen/defaultTagsCloseImagePadding"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@null"
                        android:padding="8dp"
                        android:src="@drawable/ic_facebook" />

                    <ImageButton
                        android:id="@+id/btn_twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@null"
                        android:padding="8dp"
                        android:src="@drawable/ic_twitter" />

                    <ImageButton
                        android:id="@+id/btn_linkedin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@null"
                        android:padding="8dp"
                        android:src="@drawable/ic_linkedin" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
